# EdgeCV

./: .gitignore  README.md  training_devlog.md
classifier/: cam_test.py  model.keras  model.tflite  model_best.keras  requirements.txt  sanitizer_dataset.py  test_laptop.py  train_classifier.py  train_classifier_v2.py
classifier/firmware/: CMakeLists.txt  run.sh  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.camera.additions  sdkconfig.old
classifier/firmware/main/: CMakeLists.txt  idf_component.yml  main_camera_probe.cc  main_edgecv_v2.cc  main_model_probe.cc  main_stream_raw.cc  main_tinyml_probe.cc  main_wifi_stream.cc  model_data.cc  model_data.h
mnistDigits/models/: mnist_cnn_int8.tmdl
mnistDigits/src/: downscale.py
scripts/: live_infer.py
src/: cam_sanity.py  mnist_cnn_camera.py
